Consolidate size of the drag window from top or from overview items.

The size of dragging window used to be different depending on how dragging
started. It was bigger when you drag from the top compared to when you drag
from overview items.

This CL consolidate two into the same size, to the size used when dragged
from overview items.

see recorded video:
https://drive.google.com/file/d/0B5I0jFeLxqIiNThBNU1sbVRTRUgyZmRUNUpxdVI2WVRsSHBj/view?usp=sharing

Bug: 872528
Change-Id: I778fdb871556ec960b4d8fdffd1f608c19a01148
Reviewed-on: https://chromium-review.googlesource.com/1173158
Reviewed-by: Mitsuru Oshima (Slow) <oshima@chromium.org>
Commit-Queue: Min Chen <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584521}
Former-commit-id: 168e8dce30556ad4e2e18c373941ecefd4c0f23b